# hsteinshiromoto.github.io

./: .gitignore  .tmuxinator.yml  CNAME  Dockerfile  Makefile  README.md  _config.yml  index.html  index.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: ci.yml
.obsidian/: community-plugins.json  graph.json  workspace
_data/: navigation.yml  social-media.yml
_includes/: footer.html  head.html  masthead.html  scripts.html
_layouts/: posts.html  single.html
_pages/: about.html  about.md  blog.html  blog.md  categories.md  links.md  publications.md  resume.md  sitemap.md
_posts/: 2020-04-17-blog-post_hypothesis_tests_part_1_bayesian_inference.md  2020-05-21-blog-post_hypothesis_tests_part_2_statistical_inference.md  2020-05-28-blog-post_signing_commits_with_gpg.md  2020-06-04-blog-post_cumulative_sum_with_pandas.md  2020-06-11-blog-post_datetime_resample.md  2020-06-18-blog-post_jupyter_notebook_header.md  2020-06-25-blog-post_find_row_closest_value_to_input.md  2020-07-02-blog-post_my_quick_reference_guide_for_a_few_natural_language_processing_techniques.md  2020-08-13-blog-post_querying_the_latest_record.md  2020-08-27-blog-post_pandas_value_counts.md  2020-11-12-blog-post_plotting_a_four-dimensional_heatmap.md  2021-01-21-blog_post_a_digression_on_the_cantor_set.md  2021-07-19-blog-post_estimate_number_of_observations_using_power_analysis.md  2021-07-19-blog_post_hypothesis_test_canvas.md  2021-07-20-blog-post_using_hyperopt_for_hyperparameter_tunning.md  2021-08-04-blog-post_predicting_nsw_covid_cases.html  2021-09-03-blog-post_plotting_weighted_graph.md  2021-11-28-blog-post_soft_maximum.md  2021-12-08-blog-post_mixed_integer_programming.md  2021-12-15-blog-post_optimizing_marketing_campaigns_part_1.md  2022-09-27-blog-post_adding_theme_switch_to_minimal_mistakes.md  2022-10-01-blog_post_regex_cheatsheet.md  2022-12-23-blog-post_a_control_theoretical_formulation_of_hyperparameter_tunning.md  2022-12-23-blog-post_optimization_references.md  2023-04-20-blog-post_blog-post_using_a_cost_functional_to_optimize_hyperparameters_using_cross_validation.md  (+17 more)
files/: .tmux.conf  (+1 more)
(+13 files in other folders)
