[tool.poetry]
name = "hsteinshiromoto-github-io"
version = "1.3.1"
description = "Humberto's website"
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Deprecated = "^1.2.13"
cartorio = "^2.0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
icecream = "^2.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
