[tool.poetry]
name = "hsteinshiromoto-github-io"
version = "1.3.1"
description = "Humberto's website"
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Deprecated = "^1.2.13"
cartorio = "^2.0.5"
sumy = "^0.10.0"
spacy = "^3.4.1"
nltk = "^3.7"
pandas = "^1.5.0"
PyYAML = "^6.0"
click = "^8.1.3"
python-frontmatter = "^1.0.0"
scikit-learn = "^1.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
icecream = "^2.1.3"
black = "^22.8.0"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "python"
]