[tool.poetry]
name = "hsteinshiromoto-github-io"
version = "1.3.1"
description = "Humberto's website"
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Deprecated = "^1.2.13"
cartorio = "^3.0.0"
sumy = "^0.11.0"
spacy = "^3.5.2"
nltk = "^3.8.1"
pandas = "^2.0.1"
PyYAML = "^6.0"
click = "^8.1.3"
python-frontmatter = "^1.0.0"
scikit-learn = "^1.2.2"
torch = "^2.0.0"
transformers = "^4.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
icecream = "^2.1.3"
black = "^23.3.0"
ipykernel = "^6.22.0"
tox = "^4.5.0"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "python"
]